# playlist_success

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/scripts/: build_duckdb.py
dashboard/utils/: db.py  explainer.py  explorer.py
notebooks/data/: README.md
scripts/: enrich_spotify_api.py
