[project]
name = "playlist-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=2.0.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "spotipy>=2.25.2",
    "xgboost>=3.2.0",
    "anthropic>=0.40.0",
    "duckdb>=1.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.40.0",
]
